small tweaks in length

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		    <section><h3>Theoretical Antecedents</h3></section>
 
 		    <section>
-			<h4>Thesis Motivation</h4>
+			<h4>Research Questions</h4>
 			<small>
 			<ul>
 			    <li>Participation in social movements have an strong emotional component,
@@ -72,7 +72,7 @@
 			<small>
 			<ul>
 			    <li>This work is mainly based on socio psychological models of collective
-				actions participation.</li>
+				action participation.</li>
 			    <li>In particular, the main source of inspiration was the model proposed by
 				Becker and Tausch (2015).</li>
 			</ul>
@@ -148,35 +148,11 @@
 			     style="height: 200px; margin: 0 auto 4rem auto; background: transparent;">
 		    </section>
 		    <section>
-			<p>Emotion detection methods English</p>
-			<img src="./imgs/emo_english.png"
-			     style="height: 400px; margin: 0 auto 4rem auto; background: transparent;">
-		    </section>
-		    <section>
-			<p>Emotion detection methods Spanish</p>
-			<img src="./imgs/emo_spanish.png"
-			     style="height: 400px; margin: 0 auto 4rem auto; background: transparent;">
-		    </section>
-		    <section>
-			<p>Aspect Identification: LDA</p>
-			<img src="./imgs/lda.png"
-			     style="height: 200px; margin: 0 auto 1rem auto; background: transparent;">
-			<p><small>Perplexity score:</small></p>
-			<img src="./imgs/per.png"
-			     style="height: 100px; margin: 0 auto 1rem auto; background: transparent;">
-		    </section>
-		    <section>
-			<p>Aspect Identification: Bigram formula</p>
-			<img src="./imgs/brigram.png"
-			     style="height: 100px; margin: 0 auto 1rem auto; background: transparent;">
-			<p>Aspect Identification: Bigram network</p>
-			<img src="./imgs/net.png"
-			     style="height: 350px; margin: 0 auto 4rem auto; background: transparent;">
-		    </section>
-		    <section>
-			<p>Time-series modelling: Vector Autoregresive models</p>
-			<img src="./imgs/var.png"
-			     style="height: 250px; margin: 0 auto 1rem auto; background: transparent;">
+			<ul>
+			    <li><b>Emotion Detection:</b> Supervised mechine learning and Large Language Models for maximun accuracy.</li>
+			    <li><b>Aspect Identification:</b> Knowledge discovery techniques such as LDA and bigram networks for comprehensiveness</li>
+			    <li><b>Time-series Modelling:</b> Vector autorregresive models with fixed lags.</li>
+			</ul>			
 		    </section>
 		</section>
 		<section>
@@ -208,7 +184,6 @@
 			    <li>There seem to be a feedback loop in the reports of collective actions. This might have practical implications.</li>
 			    <li><b>Fear</b> was the second most important emotion for the Hong Kong and Fridays for Future movements, but its relation to events is also weak.</li>
 			    <li><b>Joy</b> and <b>sadness</b> only had significant effects on particular cases in the Chilean Social Movement.</li>
-			    
 			</ul>			
 		    </section>
 		</section>
@@ -217,7 +192,7 @@
                     <section>
 			<p><h4>Contributions</h4></p>
 			<ul>
-			    <li>I propose a framework to analyse social media data of social movements that includes emotions/target pairs. </li>
+			    <li>I propose a framework to analyse social media data of social movements that includes emotions/target pairs.</li>
 			    <li>I propose the use of a limited set of emotions for the study of emotions in text.</li>
 			    <li>I provide a way to link expresion of emotion in social media to contention events in real life. This could have policy implications.</li>
 			</ul>
